--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
         <div class="text-center" >
             <a href="http://hbct.in/">
           Designed and Developed by HBCT.IN </br>
-			Copyright © 2023 HBCT.IN</br>
+			All Rights Reserved © 2023 TECHZONE</br>
 			version COM01.00
                 </a>
         </div>
