--- a/templates/admindashboard/control_panel/add_new_user_details.html
+++ b/templates/admindashboard/control_panel/add_new_user_details.html
@@ -173,7 +173,7 @@
       <div class="col-lg-9" style="margin-left:auto;margin-right:auto;">
          <div class="card">
            <div class="card-body">
-		  <a href="{% url 'view_all_users' %}"> <button class="mybutton button1">X Close</button></a>
+		  <a href="{% url 'view_all_profiles' %}"> <button class="mybutton button1">X Close</button></a>
            <div class="card-title">User Creation Form </div>
 
 
@@ -342,6 +342,14 @@
 				<label for="input-11">Upload image</label>
 				<input type="file" class="form-control col-lg-2" id="input-11"  style="display:inline;" name="image" required>
 			</div>
+
+
+
+                			<div class="form-group">
+				<label for="input-11">Upload image Background </label>
+				<input type="file" class="form-control col-lg-2" id="input-11"  style="display:inline;" name="imagebackground" required>
+			</div>
+
 
 
 
