--- a/templates/admindashboard/control_panel/view_all_profiles.html
+++ b/templates/admindashboard/control_panel/view_all_profiles.html
@@ -262,6 +262,9 @@
               <div class="dropdown-menu dropdown-menu-right">
                   <a class="dropdown-item" href="{% url 'user_dashboard_old' id=i.id %}">View Current Profile</a>
                   <a class="dropdown-item" href="{% url 'update_profile' id=i.id %}">Update Current Profile</a>
+                  <a class="dropdown-item" href="{% url 'update_profile_image' id=i.id %}">Update Profile Image</a>
+                  <a class="dropdown-item" href="{% url 'update_profile_image_background' id=i.id %}">Update Background Image</a>
+                   <a class="dropdown-item" href="{% url 'qrcode' id=i.id %}"> Qrcode </a>
                 <a class="dropdown-item" href="{% url 'delete_user' id=i.id %}">Delete Current Profile</a>
 
                </div>
