--- a/templates/admindashboard/users/view_all_users.html
+++ b/templates/admindashboard/users/view_all_users.html
@@ -254,6 +254,7 @@
              </a>
               <div class="dropdown-menu dropdown-menu-right">
                   <a class="dropdown-item" href="{% url 'update_profile' id=i.id %}">Update Current Profile</a>
+                  <a class="dropdown-item" href="{% url 'update_profile' id=i.id %}">Update Profile Image</a>
                 <a class="dropdown-item" href="{% url 'delete_user' id=i.id %}">Delete Current Profile</a>
 
                </div>
