--- a/templates/user/userindex.html
+++ b/templates/user/userindex.html
@@ -181,7 +181,7 @@
         <div class="col-lg-4">
            <div class="card profile-card-2">
             <div class="card-img-block">
-                <img class="img-fluid" style="width:100%" src="{{sd.profile_image.url}}" alt="Card image cap">
+                <img class="img-fluid" style="width:100%" src="{{sd.profile_image_back.url}}" alt="Card image cap">
             </div>
             <div class="card-body pt-5">
                 {% for i in pro %}
