--- a/templates/admindashboard/control_panel/update_profile_image.html
+++ b/templates/admindashboard/control_panel/update_profile_image.html
@@ -191,170 +191,8 @@
 
 
            <hr>
-            <form action="{% url 'update_profile' sd.id %}" method="post" enctype="multipart/form-data">
+            <form action="{% url 'update_profile_image' sd.id %}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-			<div class="form-group">
-				<label for="input-11">Employee Code</label>
-				<input type="text" class="form-control col-lg-2" id="input-11" value="{{sd.name}}" style="display:inline;" name="code" required>
-
-
-
-				<label for="input-12">Employee Name</label>
-				<input type="text" class="form-control col-lg-6" id="input-12" value="{{sd.name}}" style="display:inline;" name="name" required>
-
-			</div>
-
-                <div class="form-group">
-
-				<label for="input-4" class="col-lg-3">Mob</label>
-				<input type="text" class="form-control col-lg-2" id="input-4" value="{{sd.mob}}" style="display:inline;" name="mob" required>
-
-				<label for="input-4" class="col-lg-2"></label>
-
-				<label for="input-15" class="col-lg-2">email</label>
-				<input type="text" class="form-control col-lg-2" id="input-15" value="{{sd.email}}" style="display:inline;" name="email" required>
-
-			</div>
-
-                <div class="form-group">
-
-				<label for="input-15" class="col-lg-2">Location</label>
-				<input type="text" class="form-control col-lg-2" id="input-15" value="{{sd.location}}" style="display:inline;" name="location" required>
-
-
-
-			</div>
-
-
-
-
-
-
-<hr>
-                                <div class="form-group">
-
-				<label for="input-4" class="col-lg-3">Facebook</label>
-				<input type="text" class="form-control col-lg-2" id="input-4" value="{{sd.facebook}}" style="display:inline;" name="facebook" required>
-
-				<label for="input-4" class="col-lg-2"></label>
-
-				<label for="role" class="col-lg-2">Status</label>
-				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="fbendis" required>
-                    {% if sd.facebook_endis == '1' %}
-					<option style="background-color:white;" value="{{sd.facebook_endis}}">Enabled</option>
-                    {% else %}
-                    <option style="background-color:white;" value="{{sd.facebook_endis}}">Disabled</option>
-                    {% endif %}
-
-					<option value="1" >Enable</option>
-					<option value="0" >Disable</option>
-
-				</select>
-
-			</div>
-
-
-
-
-
-
-                                                <div class="form-group">
-
-				<label for="input-4" class="col-lg-3">Instagram</label>
-				<input type="text" class="form-control col-lg-2" id="input-4" value="{{sd.instagram}}" style="display:inline;" name="instagram" required>
-
-				<label for="input-4" class="col-lg-2"></label>
-
-				<label for="role" class="col-lg-2">Status</label>
-				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="insta_endis" required>
-					{% if sd.instagram_endis == '1' %}
-					<option style="background-color:white;" value="{{sd.instagram_endis}}">Enabled</option>
-                    {% else %}
-                    <option style="background-color:white;" value="{{sd.instagram_endis}}">Disabled</option>
-                    {% endif %}
-					<option value="1" >Enable</option>
-					<option value="0" >Disable</option>
-
-				</select>
-
-			</div>
-
-
-
-
-                                                <div class="form-group">
-
-				<label for="input-4" class="col-lg-3">Linked In</label>
-				<input type="text" class="form-control col-lg-2" id="input-4" value="{{sd.linkedin}}" style="display:inline;" name="linkedin" required>
-
-				<label for="input-4" class="col-lg-2"></label>
-
-				<label for="role" class="col-lg-2">Status</label>
-				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="linkedin_endis" required>
-					{% if sd.linkedin_endis == '1' %}
-					<option style="background-color:white;" value="{{sd.linkedin_endis}}">Enabled</option>
-                    {% else %}
-                    <option style="background-color:white;" value="{{sd.linkedin_endis}}">Disabled</option>
-                    {% endif %}
-					<option value="1" >Enable</option>
-					<option value="0" >Disable</option>
-
-				</select>
-
-			</div>
-
-
-
-                                                                <div class="form-group">
-
-				<label for="input-4" class="col-lg-3">Twitter</label>
-				<input type="text" class="form-control col-lg-2" id="input-4" value="{{sd.twitter}}" style="display:inline;" name="twitter" required>
-
-				<label for="input-4" class="col-lg-2"></label>
-
-				<label for="role" class="col-lg-2">Status</label>
-				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="twitter_endis" required>
-					{% if sd.twitter_endis == '1' %}
-					<option style="background-color:white;" value="{{sd.twitter_endis}}">Enabled</option>
-                    {% else %}
-                    <option style="background-color:white;" value="{{sd.twitter_endis}}">Disabled</option>
-                    {% endif %}
-					<option value="1" >Enable</option>
-					<option value="0" >Disable</option>
-
-				</select>
-
-			</div>
-
-
-
-
-
-
-
-
-
-
-
-<hr>
-           <div class="form-group">
-            <label for="input-2">Description</label>
-
-           </div>
-		   <div class="form-group">
-		   <textarea name="description" rows="5" cols="47" name="description">{{sd.prof}}</textarea>
-		   </div>
-
-
-
-
-                           <div class="form-group">
-            <label for="input-2">Profile Details</label>
-
-           </div>
-		   <div class="form-group">
-		   <textarea rows="5" cols="47" name="profiledetails">{{sd.prof_details}}</textarea>
-		   </div>
 
 
 
@@ -364,18 +202,7 @@
 			</div>
 
 
-
-
-         <!--  <div class="form-group py-2">
-             <div class="icheck-material-white">
-            <input type="checkbox" id="user-checkbox1" checked=""/>
-            <label for="user-checkbox1">I Agree Terms & Conditions</label>
-            </div>
-           </div>-->
-                <div>
-                            Enable/Disable  &nbsp; &nbsp;  &nbsp;
-                            <input type="checkbox" checked data-toggle="toggle" name="eanable_disable">
-                        </div></br>
+                </br>
 
            <div class="form-group">
             <button type="submit" class="btn btn-light px-5"><i class="icon-lock"></i> Create</button>
