--- a/templates/admindashboard/control_panel/view_all_profiles.html
+++ b/templates/admindashboard/control_panel/view_all_profiles.html
@@ -217,7 +217,7 @@
 	<div class="row">
 	 <div class="col-12 col-lg-12">
 	   <div class="card">
-	     <div class="card-header">View all Users
+	     <div class="card-header">View all Profiles
 		  <div class="card-action">
              <div class="dropdown">
              <a href="javascript:void();" class="dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown">
