--- a/templates/admindashboard/control_panel/update_profile.html
+++ b/templates/admindashboard/control_panel/update_profile.html
@@ -74,11 +74,6 @@
         </a>
       </li>
 
-        <li>
-        <a href="">
-          <i class="zmdi zmdi-format-list-bulleted"></i> <span>Branches</span>
-        </a>
-      </li>
 
        <li>
         <a href="{% url 'view_all_users' %}">
@@ -403,7 +398,8 @@
 	<footer class="footer">
       <div class="container">
         <div class="text-center">
-          Copyright © 2018 Open Bright Admin
+          All Rights Reserved Under © TECH ZONE <br>
+            Designed Developed & Maintained by <a href="http://hbct.in/">hbct.in</a>
         </div>
       </div>
     </footer>
