--- a/templates/admindashboard/control_panel/view_all_profiles.html
+++ b/templates/admindashboard/control_panel/view_all_profiles.html
@@ -58,11 +58,6 @@
         </a>
       </li>
 
-        <li>
-        <a href="">
-          <i class="zmdi zmdi-format-list-bulleted"></i> <span>Branches</span>
-        </a>
-      </li>
 
        <li>
         <a href="{% url 'view_all_users' %}">
@@ -221,7 +216,7 @@
 		  <div class="card-action">
              <div class="dropdown">
              <a href="javascript:void();" class="dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown">
-              <i class="icon-options"></i>
+              <i class="icon-options1" style="color:red;font-weight:bold;"> Add New Profile + </i>
              </a>
               <div class="dropdown-menu dropdown-menu-right">
               <a class="dropdown-item" href="{% url 'add_new_user_details' %}">Create New User Profile</a>
@@ -316,7 +311,8 @@
 	<footer class="footer">
       <div class="container">
         <div class="text-center">
-          Copyright © 2018 Open Bright Admin
+          All Rights Reserved Under © TECH ZONE <br>
+            Designed Developed & Maintained by <a href="http://hbct.in/">hbct.in</a>
         </div>
       </div>
     </footer>
