--- a/templates/admindashboard/control_panel/add_new_user_details.html
+++ b/templates/admindashboard/control_panel/add_new_user_details.html
@@ -189,12 +189,13 @@
             <form action="{% url 'add_new_user_details_regi' %}" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
 			<div class="form-group">
+                <!--
 				<label for="input-11">Employee Code</label>
 				<input type="text" class="form-control col-lg-2" id="input-11" placeholder="Enter Employee Code" style="display:inline;" name="code" required>
+-->
 
 
-
-				<label for="input-12">Employee Name</label>
+				<label for="input-12">Profile Name</label>
 				<input type="text" class="form-control col-lg-6" id="input-12" placeholder="Enter user Name" style="display:inline;" name="name" required>
 
 			</div>
