--- a/templates/admindashboard/control_panel/add_new_user_details.html
+++ b/templates/admindashboard/control_panel/add_new_user_details.html
@@ -203,7 +203,7 @@
                 <div class="form-group">
 
 				<label for="input-4" class="col-lg-3">Mob</label>
-				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter User Name" style="display:inline;" name="mob" required>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter MOB Name" style="display:inline;" name="mob" required>
 
 				<label for="input-4" class="col-lg-2"></label>
 
@@ -230,7 +230,7 @@
                                 <div class="form-group">
 
 				<label for="input-4" class="col-lg-3">Facebook</label>
-				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter User Name" style="display:inline;" name="facebook" required>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter FB ID" style="display:inline;" name="facebook" required>
 
 				<label for="input-4" class="col-lg-2"></label>
 
@@ -249,7 +249,7 @@
                                                 <div class="form-group">
 
 				<label for="input-4" class="col-lg-3">Instagram</label>
-				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter User Instagram ID" style="display:inline;" name="instagram" required>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter Instagram ID" style="display:inline;" name="instagram" required>
 
 				<label for="input-4" class="col-lg-2"></label>
 
@@ -269,7 +269,7 @@
                                                 <div class="form-group">
 
 				<label for="input-4" class="col-lg-3">Linked In</label>
-				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter User Instagram ID" style="display:inline;" name="linkedin" required>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter LINKED ID" style="display:inline;" name="linkedin" required>
 
 				<label for="input-4" class="col-lg-2"></label>
 
@@ -288,7 +288,7 @@
                                                                 <div class="form-group">
 
 				<label for="input-4" class="col-lg-3">Twitter</label>
-				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter User Instagram ID" style="display:inline;" name="twitter" required>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter TWITTER ID" style="display:inline;" name="twitter" required>
 
 				<label for="input-4" class="col-lg-2"></label>
 
