--- a/templates/admindashboard/control_panel/add_new_user_details.html
+++ b/templates/admindashboard/control_panel/add_new_user_details.html
@@ -236,7 +236,7 @@
 
 				<label for="role" class="col-lg-2">Status</label>
 				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="fbendis" required>
-					<option style="background-color:white;">Select</option>
+					<option style="background-color:white;" value="0">Select</option>
 					<option value="1" >Enable</option>
 					<option value="0" >Disable</option>
 
@@ -255,7 +255,7 @@
 
 				<label for="role" class="col-lg-2">Status</label>
 				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="insta_endis" required>
-					<option style="background-color:white;">Select</option>
+					<option style="background-color:white;" value="0">Select</option>
 					<option value="1" >Enable</option>
 					<option value="0" >Disable</option>
 
@@ -275,7 +275,7 @@
 
 				<label for="role" class="col-lg-2">Status</label>
 				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="linkedin_endis" required>
-					<option style="background-color:white;">Select</option>
+					<option style="background-color:white;" value="0">Select</option>
 					<option value="1" >Enable</option>
 					<option value="0" >Disable</option>
 
@@ -294,7 +294,7 @@
 
 				<label for="role" class="col-lg-2">Status</label>
 				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="twitter_endis" required>
-					<option style="background-color:white;">Select</option>
+					<option style="background-color:white;" value="0">Select</option>
 					<option value="1" >Enable</option>
 					<option value="0" >Disable</option>
 
@@ -348,19 +348,7 @@
 
 
 
-
-
-
-         <!--  <div class="form-group py-2">
-             <div class="icheck-material-white">
-            <input type="checkbox" id="user-checkbox1" checked=""/>
-            <label for="user-checkbox1">I Agree Terms & Conditions</label>
-            </div>
-           </div>-->
-                <div>
-                            Enable/Disable  &nbsp; &nbsp;  &nbsp;
-                            <input type="checkbox" checked data-toggle="toggle" name="eanable_disable">
-                        </div></br>
+                </br>
 
            <div class="form-group">
             <button type="submit" class="btn btn-light px-5"><i class="icon-lock"></i> Create</button>
