--- a/templates/admindashboard/control_panel/view_all_profiles.html
+++ b/templates/admindashboard/control_panel/view_all_profiles.html
@@ -155,16 +155,16 @@
         <div class="row row-group m-0">
             <div class="col-12 col-lg-6 col-xl-4 border-light">
                 <div class="card-body">
-                  <h5 class="text-white mb-0">9526 <span class="float-right"><i class="fa fa-shopping-cart"></i></span></h5>
+                  <h5 class="text-white mb-0"> . <span class="float-right"><i class="fa fa-shopping-cart"></i></span></h5>
                     <div class="progress my-3" style="height:3px;">
                        <div class="progress-bar" style="width:100%"></div>
                     </div>
-                  <p class="mb-0 text-white small-font">Total Items <span class="float-right"> <i class="zmdi zmdi-long-arrow-up"></i></span></p>
+                  <p class="mb-0 text-white small-font"> . <span class="float-right"> <i class="zmdi zmdi-long-arrow-up"></i></span></p>
                 </div>
             </div>
             <div class="col-12 col-lg-6 col-xl-4 border-light">
                 <div class="card-body">
-                  <h5 class="text-white mb-0">8323 <span class="float-right"><i class="fa fa-shopping-cart"></i></span></h5>
+                  <h5 class="text-white mb-0"> . <span class="float-right"><i class="fa fa-shopping-cart"></i></span></h5>
                     <div class="progress my-3" style="height:3px;">
                        <div class="progress-bar" style="width:100%"></div>
                     </div>
@@ -173,11 +173,11 @@
             </div>
             <div class="col-12 col-lg-6 col-xl-4 border-light">
                 <div class="card-body">
-                  <h5 class="text-white mb-0">6200 <span class="float-right"><i class="fa fa-shopping-cart"></i></span></h5>
+                  <h5 class="text-white mb-0"> . <span class="float-right"><i class="fa fa-shopping-cart"></i></span></h5>
                     <div class="progress my-3" style="height:3px;">
                        <div class="progress-bar" style="width:100%"></div>
                     </div>
-                  <p class="mb-0 text-white small-font">Disable Items <span class="float-right"> <i class="zmdi zmdi-long-arrow-up"></i></span></p>
+                  <p class="mb-0 text-white small-font"> . <span class="float-right"> <i class="zmdi zmdi-long-arrow-up"></i></span></p>
                 </div>
             </div>
            <!-- <div class="col-12 col-lg-6 col-xl-3 border-light">
