--- a/templates/admindashboard/control_panel/view_all_profiles.html
+++ b/templates/admindashboard/control_panel/view_all_profiles.html
@@ -47,7 +47,7 @@
      <div class="brand-logo">
       <a href="index.html">
        <img src="{% static 'admindashboard/assets/images/logo-icon.png' %}" class="logo-icon" alt="logo icon">
-       <h5 class="logo-text">Open Bright</h5>
+       <h5 class="logo-text"> TECH ZONE </h5>
      </a>
    </div>
    <ul class="sidebar-menu do-nicescrol">
