--- a/templates/admindashboard/adminindex.html
+++ b/templates/admindashboard/adminindex.html
@@ -58,6 +58,12 @@
         </a>
       </li>
 
+              <li>
+        <a href="{% url 'getfile' %}">
+          <i class="zmdi zmdi-face"></i> <span>csv</span>
+        </a>
+      </li>
+
 
        <li>
         <a href="{% url 'view_all_users' %}">
