--- a/templates/admindashboard/control_panel/qrcode.html
+++ b/templates/admindashboard/control_panel/qrcode.html
@@ -61,6 +61,7 @@
         <span class="input-group-text" id="inputGroup-sizing-default">Text/Link:</span>
         <input type="text" class="form-control" aria-describedby="inputGroup-sizing-default" name="qr_text" autofocus>
       </div> -->
+      {{msg}}
       <div class="input-group mb-3">
         <input type="submit" value="Generate QR Code" style="max-width: 200px; margin: auto" class="form-control">
       </div>
