--- a/templates/admindashboard/control_panel/add_new_user_details.html
+++ b/templates/admindashboard/control_panel/add_new_user_details.html
@@ -308,6 +308,86 @@
 
 
 
+                                                                               <div class="form-group">
+
+				<label for="input-4" class="col-lg-3"> WhatsApp </label>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter WhatsApp ID" style="display:inline;" name="what" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="what_endis" required>
+					<option style="background-color:white;" value="0">Select</option>
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
+
+
+
+
+                                                                               <div class="form-group">
+
+				<label for="input-4" class="col-lg-3"> Youtube </label>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter TWITTER ID" style="display:inline;" name="youtube" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="youtube_endis" required>
+					<option style="background-color:white;" value="0">Select</option>
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
+
+                                                                               <div class="form-group">
+
+				<label for="input-4" class="col-lg-3"> Google </label>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter TWITTER ID" style="display:inline;" name="google" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="google_endis" required>
+					<option style="background-color:white;" value="0">Select</option>
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
+
+
+
+                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3"> Telegram </label>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter TWITTER ID" style="display:inline;" name="telegram" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="telegram_endis" required>
+					<option style="background-color:white;" value="0">Select</option>
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
 
 
 
