--- a/templates/admindashboard/control_panel/update_profile.html
+++ b/templates/admindashboard/control_panel/update_profile.html
@@ -331,6 +331,117 @@
 
 
 
+                                                                                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3">WhatsApp</label>
+				<input type="text" class="form-control col-lg-2" id="input-4" value="{{sd.whatsapp}}" style="display:inline;" name="what" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="what_endis" required>
+					{% if sd.whatsapp_endis == '1' %}
+					<option style="background-color:white;" value="{{sd.whatsapp_endis}}">Enabled</option>
+                    {% else %}
+                    <option style="background-color:white;" value="{{sd.whatsapp_endis}}">Disabled</option>
+                    {% endif %}
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
+
+
+
+
+
+                                                                                                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3">youtube</label>
+				<input type="text" class="form-control col-lg-2" id="input-4" value="{{sd.youtube}}" style="display:inline;" name="youtube" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="youtube_endis" required>
+					{% if sd.youtube_endis == '1' %}
+					<option style="background-color:white;" value="{{sd.youtube_endis}}">Enabled</option>
+                    {% else %}
+                    <option style="background-color:white;" value="{{sd.youtube_endis}}">Disabled</option>
+                    {% endif %}
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
+
+
+
+                                                                                                                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3">google</label>
+				<input type="text" class="form-control col-lg-2" id="input-4" value="{{sd.google}}" style="display:inline;" name="google" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="google_endis" required>
+					{% if sd.google_endis == '1' %}
+					<option style="background-color:white;" value="{{sd.google_endis}}">Enabled</option>
+                    {% else %}
+                    <option style="background-color:white;" value="{{sd.google_endis}}">Disabled</option>
+                    {% endif %}
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
+
+
+
+
+
+
+                                                                                                                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3">telegram</label>
+				<input type="text" class="form-control col-lg-2" id="input-4" value="{{sd.telegram}}" style="display:inline;" name="telegram" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="telegram_endis" required>
+					{% if sd.telegram_endis == '1' %}
+					<option style="background-color:white;" value="{{sd.telegram_endis}}">Enabled</option>
+                    {% else %}
+                    <option style="background-color:white;" value="{{sd.telegram_endis}}">Disabled</option>
+                    {% endif %}
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
+
+
+
+
+
+
+
+
+
 <hr>
            <div class="form-group">
             <label for="input-2">Description</label>
