--- a/templates/admindashboard/control_panel/add_new_user_details.html
+++ b/templates/admindashboard/control_panel/add_new_user_details.html
@@ -392,6 +392,52 @@
 
 
 
+
+
+                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3"> Genaral Link Name </label>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter Genaral link Headding" style="display:inline;" name="general_link_head_1" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+<!--
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="general_link_head_1_endis" required>
+					<option style="background-color:white;" value="0">Select</option>
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+-->
+			</div>
+
+
+
+
+
+
+                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3"> Genaral Link </label>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter TWITTER ID" style="display:inline;" name="general_link" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="general_link_endis" required>
+					<option style="background-color:white;" value="0">Select</option>
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
+
+
+
+
 <hr>
            <div class="form-group">
             <label for="input-2">Description</label>
