--- a/templates/user/userindex.html
+++ b/templates/user/userindex.html
@@ -128,6 +128,9 @@
   <div class="content-wrapper">
     <div class="container-fluid">
 
+
+
+
       <div class="row mt-3">
         <div class="col-lg-4">
            <div class="card profile-card-2">
@@ -149,8 +152,10 @@
 				  <a href="mailto:{{i.email}}"> <i class="fa fa-envelope bg-twitter text-white">  </i> Email </a>
 				  <a href="{{i.location}}"> <i class="fa fa-map-marker bg-google-plus text-white">  </i> Location </a>
 
+                    <!--
                     <a href="{% url 'getfile' id=i.id %}"> <i class="fa fa-map-marker bg-google-plus text-white">  </i> save </a>
-
+-->
+                     <button onclick="window.print()">save</button>
 
                     {% endfor %}
                 </div>
