--- a/templates/admindashboard/control_panel/add_new_user_details.html
+++ b/templates/admindashboard/control_panel/add_new_user_details.html
@@ -438,6 +438,90 @@
 
 
 
+                                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3"> Genaral Link Name 2 </label>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter Genaral link Headding" style="display:inline;" name="general_link_head_12" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+<!--
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="general_link_head_1_endis" required>
+					<option style="background-color:white;" value="0">Select</option>
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+-->
+			</div>
+
+
+
+
+                                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3"> Genaral Link 2 </label>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter TWITTER ID" style="display:inline;" name="general_link2" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="general_link_endis2" required>
+					<option style="background-color:white;" value="0">Select</option>
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
+
+
+
+
+
+                                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3"> Genaral Link Name 3 </label>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter Genaral link Headding" style="display:inline;" name="general_link_head_13" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+<!--
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="general_link_head_1_endis" required>
+					<option style="background-color:white;" value="0">Select</option>
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+-->
+			</div>
+
+
+
+
+                                <div class="form-group">
+
+				<label for="input-4" class="col-lg-3"> Genaral Link 3 </label>
+				<input type="text" class="form-control col-lg-2" id="input-4" placeholder="Enter TWITTER ID" style="display:inline;" name="general_link3" required>
+
+				<label for="input-4" class="col-lg-2"></label>
+
+				<label for="role" class="col-lg-2">Status</label>
+				<select id="role" class="col-lg-2 form-control" style="display:inline;" name="general_link_endis3" required>
+					<option style="background-color:white;" value="0">Select</option>
+					<option value="1" >Enable</option>
+					<option value="0" >Disable</option>
+
+				</select>
+
+			</div>
+
+
+
+
+
 <hr>
            <div class="form-group">
             <label for="input-2">Description</label>
@@ -471,6 +555,14 @@
 				<label for="input-11">Upload image Background </label>
 				<input type="file" class="form-control col-lg-2" id="input-11"  style="display:inline;" name="imagebackground" required>
 			</div>
+
+
+
+                			<div class="form-group">
+				<label for="input-11">Upload Brochure </label>
+				<input type="file" class="form-control col-lg-2" id="input-11"  style="display:inline;" name="broch" required>
+			</div>
+
 
 
 
