--- a/templates/admindashboard/adminindex.html
+++ b/templates/admindashboard/adminindex.html
@@ -260,6 +260,7 @@
                   <a class="dropdown-item" href="{% url 'update_profile' id=i.id %}">Update Current Profile</a>
                   <a class="dropdown-item" href="{% url 'update_profile_image' id=i.id %}">Update Profile Image</a>
                   <a class="dropdown-item" href="{% url 'update_profile_image_background' id=i.id %}">Update Background Image</a>
+                   <a class="dropdown-item" href="{% url 'update_pdf' id=i.id %}">Update PDF </a>
                    <a class="dropdown-item" href="{% url 'qrcode' id=i.id %}"> Qrcode </a>
                 <a class="dropdown-item" href="{% url 'delete_user' id=i.id %}">Delete Current Profile</a>
 
