--- a/templates/user/userindex.html
+++ b/templates/user/userindex.html
@@ -390,11 +390,11 @@
                      <div class="media-body text-left ml-3">
                        <div class="progress-wrapper">
                          <p>{{i.genaral_link_name}} <span class="float-right">  </span></p>
-                          <!--  <input type="button" value="{{i.genaral_link}}">
+                          <!--  <input type="button" value="{{i.genaral_link}}"> -->
 
                          <div class="progress" style="height: 5px;">
                          <div class="progress-bar" style="width:100%"></div>
-                         </div> -->
+                         </div>
                         </div>
                     </div>
                   </div><hr>
@@ -421,11 +421,11 @@
                      <div class="media-body text-left ml-3">
                        <div class="progress-wrapper">
                          <p>{{i.genaral_link_name2}} <span class="float-right">  </span></p>
-                          <!--  <input type="button" value="{{i.genaral_link}}">
+                          <!--  <input type="button" value="{{i.genaral_link}}"> -->
 
                          <div class="progress" style="height: 5px;">
                          <div class="progress-bar" style="width:100%"></div>
-                         </div> -->
+                         </div>
                         </div>
                     </div>
                   </div><hr>
@@ -450,11 +450,11 @@
                      <div class="media-body text-left ml-3">
                        <div class="progress-wrapper">
                          <p>{{i.genaral_link_name3}} <span class="float-right">  </span></p>
-                          <!--  <input type="button" value="{{i.genaral_link}}">
+                          <!--  <input type="button" value="{{i.genaral_link}}"> -->
 
                          <div class="progress" style="height: 5px;">
                          <div class="progress-bar" style="width:100%"></div>
-                         </div> -->
+                         </div>
                         </div>
                     </div>
                   </div><hr>
